# dagster_template

./: .gitignore  Dockerfile  README.md  dagster.yaml  dagster_dagit.dockerfile  docker-compose.yml  prueba_local.csv  pyproject.toml  requirements_ui.txt  workspace.yaml
dagster_template/: repository_test.py  requirements.txt  test_code.dockerfile
dagster_template/assets/: __init__.py  asset_one.py
dbt/: Dockerfile
tests/: test_dagster_template.py
