[tool.poetry]
name = "dagster-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.0.1"
dagit = "^1.0.1"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
mypy = "^0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
