[tool.poetry]
name = "dagster-template"
version = "0.1.0"
description = "Template para iniciar dagster"
authors = ["Luis Rico <luisf.ricoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.1.3"
dagit = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
