[tool.poetry]
name = "dagster-template"
version = "0.1.0"
description = "Template para iniciar dagster"
authors = ["Luis Rico <luisf.ricoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.1.3"
dagit = "^1.1.3"
dagster-gcp = "^0.17.3"
pygsheets = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
